[package]
name = "idup"
version = "0.1.0"
authors = ["Conner Dunn <connerdunn7399@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
structopt = "0.3"
infer = "0.19.0"
rusqlite = "0.35.0"
env_logger = "0.11.8"
