[package]
name = "idup"
version = "0.1.0"
authors = ["Conner Dunn <connerdunn7399@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
infer = "0.19.0"
rusqlite = "0.37.0"
env_logger = "0.11.8"
directories = "6.0.0"
